fix gap forms

--- a/src/scss/_ui.scss
+++ b/src/scss/_ui.scss
@@ -319,6 +319,7 @@ input {
   .star {
     width: 2rem;
     height: 1.8rem;
+    cursor: pointer;
 
     svg {
       fill: #d5d5d5;
