--- a/src/scss/components/indexPage/_hero.scss
+++ b/src/scss/components/indexPage/_hero.scss
@@ -162,7 +162,7 @@
       @media (max-width: em(575)) {
         flex-direction: column;
         width: 100%;
-        gap: 1rem;
+        gap: 2rem;
       }
     }
 
