--- a/src/scss/components/quiz/_quiz.scss
+++ b/src/scss/components/quiz/_quiz.scss
@@ -176,6 +176,7 @@
 
           @media (max-width: em(767)) {
             flex-direction: column;
+            gap: 2rem;
           }
         }
       }
@@ -275,6 +276,10 @@
         gap: 2rem;
       }
     }
+  }
+
+  &__fields {
+    width: 100%;
   }
 
   &__decor {
